[package]
name = "tokio-server"
version = "0.1.0"
authors = ["tikhono <tihonovandrey11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytes = ""

rand = "0.5.5"

tokio = { version = "0.2", features = ["full"] }

futures = "0.3"
